--- a/1_Displaying_Interactive_Maps_Using_Geopandas_Folium_Ipyleaflet_(GIS).ipynb
+++ b/1_Displaying_Interactive_Maps_Using_Geopandas_Folium_Ipyleaflet_(GIS).ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyNIkZnxvAQ7uSUkW0HDxRmA",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -981,16 +979,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ItsYourNafiz/GIS-Geospatial-Analysis-with-Python-Geopandas-and-Folium/blob/main/1_Displaying_Interactive_Maps_Using_Geopandas_Folium_Ipyleaflet_(GIS).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": 11,
